--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -86,7 +86,7 @@
                                     <p>{{prd_detail.period}}개월</p>
                                 </li>
                                 <li>
-                                    <span class="li_title">필수옵션</span>
+                                    <span class="li_title">옵션</span>
                                     <p>{{prd_detail.option}}</p>
                                 </li>
                                 <li>
