--- a/main/templates/mypage/myorder.html
+++ b/main/templates/mypage/myorder.html
@@ -7,6 +7,7 @@
         <div class="tabs mypage">
             <ul>
                 <li><a href="/myprofile/">내 프로필</a></li>
+                 <li><a href="/coupon/">내 쿠폰</a></li>
                 <li class="active"><a href="/myorder/">주문내역</a></li>
             </ul>
         </div>
@@ -17,12 +18,6 @@
                 <ul>
                     <li class="mypageTbl orderList">
                         <h3>주문내역</h3>
-
-                        <!-- 해당정보가 없을경우 -->
-                        <!--<div class="empty">
-                            <span>주문내역이 없습니다.</span>
-                        </div>-->
-                        <!-- 해당정보가 없을경우 end -->
 
                         <ul class="list">
                             <li class="thead">
