--- a/main/templates/mypage/myprofile.html
+++ b/main/templates/mypage/myprofile.html
@@ -10,7 +10,7 @@
         <div class="tabs mypage">
             <ul>
                 <li class="active"><a href="/myprofile/">내 프로필</a></li>
-<!--                <li><a href="#">내 쿠폰</a></li>-->
+                <li><a href="/coupon/">내 쿠폰</a></li>
                 <li><a href="/myorder/">주문내역</a></li>
             </ul>
         </div>
